Add the Admin Scan Index,Studied and understand multiple things about resources and filtering using whereHas
